# openbb-pydantic-ai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/instructions/: python.instructions.md
.github/workflows/: lint.yaml  publish.yaml  test.yaml
examples/: README.md  instrumentation.py  pyproject.toml  simple_example.py  skills_example.py
examples/prompts/: skills_example_prompt.py
examples/skills/dbs-report/: SKILL.md
examples/skills/dbs-report/references/: disclaimer-boilerplate.md  report-spec.md  template.md
examples/skills/dcf/: SKILL.md
examples/skills/dcf/references/: html-template-style.md
openbb_pydantic_ai/: __init__.py  _adapter.py  _config.py  _dependencies.py  _event_builder.py  _event_stream.py  _event_stream_components.py  _event_stream_formatters.py  _event_stream_helpers.py  _local_tool_capsule.py  _mcp_toolsets.py  _message_transformer.py  _pdf_preprocess.py  _serializers.py  _stream_parser.py  _toolsets.py  _types.py  _utils.py  _viz_toolsets.py  _widget_registry.py  _widget_toolsets.py
openbb_pydantic_ai/pdf/: __init__.py  _citations.py  _extractor.py  _graph.py  _preprocess.py  _query.py  _store.py  _toolsets.py  _types.py
openbb_pydantic_ai/tool_discovery/: __init__.py  progressive.py  tool_discovery_toolset.py
scripts/: check_test_style.py
tests/: README.md  conftest.py  test_adapter.py  test_dependencies.py  test_event_stream.py  test_event_stream_helpers.py  test_mcp_toolsets.py  test_pdf_citations.py  test_pdf_extractor.py  test_pdf_preprocess.py  test_pdf_store.py  test_pdf_toolsets.py  test_tool_discovery_toolset.py  test_toolsets.py
tests/helpers/: event_stream_assertions.py  snapshot_utils.py
tests/smoke/: test_distribution.py
tests/unit/adapter/: _assertions.py  test_instructions.py  test_local_capsule_defaults.py  test_local_capsule_integrity.py  test_local_capsule_rehydrate.py  test_message_transformer.py  test_preprocess.py  test_progressive_discovery.py  test_streaming.py  test_tool_call_ids.py  test_turn_boundaries.py  test_unbatching.py
tests/unit/core/: test_dependencies.py  test_stream_parser.py  test_tool_discovery_toolset.py  test_viz_toolsets.py
tests/unit/event_stream/: _builders.py  test_artifacts.py  test_content_parsing.py  test_discovery_wrappers.py  test_error_paths.py  test_flow.py  test_local_capsule_capture.py  test_reasoning.py  test_stream_state.py  test_widget_resolution.py
tests/unit/mcp/: test_toolsets.py
tests/unit/pdf/: test_citations.py  test_extractor.py  test_preprocess.py  test_store.py  test_toolsets.py
tests/unit/widgets/: test_widget_tool_name.py
