[project]
name = "openbb-pydantic-ai"
version = "0.1.7"
description = "Pydantic AI adapter for OpenBB SDK. Enables connettion any pydantic-ai agent to the OpenBB Workspace."
authors = [
    { name = "Magnus Samuelsen" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openbb-ai>=1.8.5",
    "pydantic-ai-slim[ui]>=1.47.0",
]

[project.optional-dependencies]
pdf = [
    "docling>=2.72.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.4",
    "ty>=0.0.2",
]


[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "openbb_pydantic_ai"
module-root = ""

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
    "S", # security / flake8-bandit
]
ignore = [
    "S101", # ignore assert statements being used (for pytest)
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]

[tool.ty.src]
exclude = ["tests/smoke_test.py"]
